force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__AttributedUserId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AttributedUserId__c</fullName>
    <label>Attributed User</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AttributedUserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>