force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__Date__c.field-meta.xml
<CustomField>
    <fullName>ssot__Date__c</fullName>
    <label>Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Date</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>