force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__ExtendedSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExtendedSummaryText__c</fullName>
    <label>Extended Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExtendedSummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>