force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__GivingLevel__c.field-meta.xml
<CustomField>
    <fullName>ssot__GivingLevel__c</fullName>
    <label>Giving Level</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GivingLevel</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>