force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__OtherAssetsValueAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__OtherAssetsValueAmount__c</fullName>
    <label>Other Assets Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OtherAssetsValueAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>