force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__rel_1731039801618_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731039801618_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicAssessment_Account_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicAssessment_Account_rel</relationshipLabel>
    <relationshipName>rel_1731039801618_end</relationshipName>
    <type>Lookup</type>
</CustomField>