force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__rel_1731040462192_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040462192_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyPhilanthropicAssessment_Contact_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PartyPhilanthropicAssessment_Contact_rel</relationshipLabel>
    <relationshipName>rel_1731040462192_end</relationshipName>
    <type>Lookup</type>
</CustomField>