force-app/main/default/objects/ssot__PartyPhilanthropicAssessment__dlm/fields/ssot__WealthAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__WealthAmount__c</fullName>
    <label>Wealth Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WealthAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>